# Machine_Learning_5JV

./: Cargo.toml  Code_main_weights.txt  code_main_last_version.txt  linear_model_weights_0.txt  linear_model_weights_1.txt  linear_model_weights_2.txt  model_weights.json  model_weights.txt  model_weights_mlp.json  rbfn_model_weights.txt  rbfn_model_weights_Aubergine.txt  rbfn_model_weights_Orange.txt  rbfn_model_weights_Tomato.txt  {
dll_folder/: Cargo.toml  restart_app.bat
dll_folder/images_16/: data.csv
dll_folder/src/: app.py  config.json  index.html  lib.rs  linear_model_weights_0.txt  linear_model_weights_1.txt  linear_model_weights_2.txt  model_weights_mlp.json  prediction.json  rbfn_model_weights_Aubergine.txt  rbfn_model_weights_Orange.txt  rbfn_model_weights_Tomato.txt
dll_folder/src/models/: linear_model.rs  mlp_model.rs  rbfn_model.rs
src/: change_file_extension.rs  change_files_name.rs  guess.rs  lib.rs  linear_model.rs  main.rs  mlp_model.rs  rbf_model.rs  resize_image.py  scrap.py  test.rs
src/load_algo/: change_files_name.rs
