[package]
name = "Machine_Learning_5JV"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
rand = "0.8.5"
glob = "0.3.1"
num = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15.4"
diff = { version = "0.1.13", features = [] }
reqwest = { version = "0.11", features = ["json", "stream"] }
scraper = "0.12"
tokio = { version = "1", features = ["full"] }

